public/css/settingspage.css
body {
    background: #212121;
}

@media (max-width: 580px) {
    .s-player-name {
        font-size: 40px !important;
    }
}

@media (max-width: 470px) {
    .s-player-name {
        font-size: 30px !important;
    }
}

@media (max-width: 410px) {
    .s-player-name {
        margin-left: 5px !important;
    }
}

@media (max-width: 360px) {
    .s-player-name {
        font-size: 25px !important;
    }
}


@media (max-width: 424px) {
    .s-warning {
        margin-left: 0px !important;
        margin-top: 10px;
        display: block;
    }
}

.s-main {
    max-width: 900px;
    margin: auto;
    padding: 20px;
    margin-top: 50px;
    color: var(--light);
    background: var(--dark);
    -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.8);
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.8);
    margin-bottom: 60px;
}

.s-avatar-frame {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    border: 5px solid red;
    display: inline-block;
    -webkit-box-shadow: 0px 0px 12px 4px #292929;
    box-shadow: 0px 0px 12px 4px #292929;
    overflow: hidden;
    background: #de4343;
}

.s-avatar-img {
    width: 150px;
    height: 150px;
}

.s-user-profile {
    display: inline-block;
}

.s-header {
    font-weight: bold;
    font-size: 35px;
    padding-bottom: 20px;
}

.s-player-name {
    font-size: 60px;
    display: inline-block;
    position: relative;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    margin-left: 25px;
    margin-right: 10px;
    margin-top: 30px !important;
    font-weight: bold;
    text-shadow: 0px 0px 12px #0f0f0f;
    margin-top: -90px;
}

.s-divider {
    border: 1px solid var(--light);
    margin-top: 25px;
    margin-bottom: 25px;
}

.s-area-header {
    font-size: 20px;
    margin-bottom: 5px;
}

.s-color-selectbar {
    width: 100%;
    overflow-x: auto;
    margin-right: 50px;
    border: 2px solid var(--light);
    border-radius: 5px;
    white-space: nowrap;
}

.s-cs-inner {
    width: 55px;
    height: 55px;
    border-radius: 50%;
}

.s-cs-button {
    display: inline-block;
    border-radius: 50%;
    padding: 3px;
    margin: 7px;
    cursor: pointer;
    border: none;
    background: none;
}

.s-cs-button:focus {
    outline: none;
}

.cs-selected {
    border: 3px solid var(--light)
}

.save-button {
    min-width: 180px;
    font-size: 20px;
    padding: 5px;
    padding-top: 10px;
    padding-bottom: 10px;
    border: none;
    cursor: pointer;
    transition: 0.4s;
    border-radius: 10px;
    margin-top: 25px;
}

.s-option-top {
    min-width: 180px;
    font-size: 20px;
    padding: 5px;
    padding-top: 10px;
    padding-bottom: 10px;
    border: none;
    cursor: pointer;
    transition: 0.4s;
    border-radius: 10px;
}

.u-back {
    position: fixed;
    top: 15px;
    left: 15px;
    z-index: 696969;
    padding: 5px;
    font-size: 20px;
    background: var(--light-darker);
    border: 1px solid var(--medium);
    padding-left: 10px;
    padding-right: 12px;
    cursor: pointer;
    transition: 0.3s;
}

.u-back:hover {
    background: var(--light);
    border-radius: 10px;
}

.s-more-tt {
    margin-top: 20px;
    font-size: 17px;
}

.s-yellow {
    background: #e0e000;
    color: var(--night);
    margin-left: 10px;
}

.s-yellow:hover {
    background: #baba00;
}

.s-warning {
    background: #e00d0d;
    color: var(--light);
    margin-left: 10px;
}

.s-warning:hover {
    background: #ba0d0d;
}

#logout-confirm {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
    opacity: 0;
    transition: 1s;
}

#lc-content {
    background-color: var(--medium);
    margin: auto;
    margin-top: calc(15% + 40px);
    padding: 20px;
    max-width: 800px;
    width: 90%;
    color: var(--dark);
    font-size: 18px;
}

.lc-top {
    font-size: 24px;
    float: right;
}

.lc-middle {
    margin-top: 26px;
}

#lc-exit {
    cursor: pointer;
}

#lc-exit:hover {
    color: var(--light-darker);
}

#delete-account-confirm {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
    opacity: 0;
    transition: 1s;
}

#dac-content {
    background-color: #e0e000;
    margin: auto;
    margin-top: calc(15% + 40px);
    padding: 20px;
    max-width: 800px;
    width: 90%;
    color: var(--night);
    font-size: 18px;
}

#dac-exit {
    cursor: pointer;
}

#dac-exit:hover {
    color: var(--light-darker);
}

.s-devicesettings {
    margin-top: 25px;
}

.s-area-info {
    font-size: 14px;
}

.settingstoggle {
    margin-right: 5px;
    font-size: 16px;
    position: relative;
    display: inline-block;
    height: 28px;
    vertical-align: middle;
}

.switch {
    width: 48px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgb(124, 124, 124);
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 34px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 20px;
    width: 20px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 50%;
}

.switch input:checked+.slider {
    background-color: var(--green);
}

.switch input:focus+.slider {
    box-shadow: 0 0 1px var(--green);
}

.switch input:checked+.slider:before {
    -webkit-transform: translateX(20px);
    -ms-transform: translateX(20px);
    transform: translateX(20px);
}

.s-ds-setting {
    margin-top: 15px;
}

.DSslider {
    -webkit-appearance: none;
    width: 100%;
    height: 15px;
    border-radius: 5px;
    background: var(--medium);
    outline: none;
    -webkit-transition: .2s;
    transition: .2s;
}

.DSslider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    background: var(--green);
    cursor: pointer;
}

.DSslider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    background: var(--green);
    cursor: pointer;
}

